# cabal-build-failure-7456

./: ExampleFailure.hs  failing.cabal
