cabal-version:       3.0
name:                failing
version:             0.0.0
synopsis:            It does not build
category:            Example
license:             BSD-3-Clause
license-file:        LICENSE
author:              Alex Washburn
maintainer:          hackage@recursion.ninja
copyright:           (c) Alex Washburn 2021
description:         This package does not build

build-type:          Simple

tested-with:
  GHC == 9.0.1
  GHC == 8.10.3
  GHC == 8.8.4
  GHC == 8.6.5

library

  build-depends:
    base      >= 4.4 && < 5,
    text-show >= 3.8

  default-language:
    Haskell2010

  exposed-modules:
    ExampleFailure

  hs-source-dirs: .
